@@ -1,6 +1,6 @@
 Package: latticeExtra
-Version: 0.6-1
-Date: 2009/06/21
+Version: 0.6-2
+Date: 2009/09/17
 Title: Extra Graphical Utilities Based on Lattice
 Author: Deepayan Sarkar <deepayan.sarkar@r-project.org>, Felix Andrews <felix@nfrac.org>
 Maintainer: Deepayan Sarkar <deepayan.sarkar@r-project.org>
